Created SQL for plane